fixing mis-alignment with typeahead see #133

--- a/bootstrap-tagmanager.css
+++ b/bootstrap-tagmanager.css
@@ -91,7 +91,8 @@
   display: none;
 }
 input[type="text"].tm-input {
-  margin-bottom: 5px;
+/*   margin-bottom: 5px;
+ */  vertical-align: middle !important;
 }
 .control-group.tm-group {
   margin-bottom: 5px;
